[package]
name = "advent2020"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
path = "src/bin/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06/day06.rs"

[[bin]]
name = "day07"
path = "src/bin/day07/day07.rs"

[[bin]]
name = "day08"
path = "src/bin/day08/day08.rs"

[[bin]]
name = "day09"
path = "src/bin/day09/day09.rs"

[[bin]]
name = "day10"
path = "src/bin/day10/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/day11/day11.rs"

[[bin]]
name = "day12"
path = "src/bin/day12/day12.rs"

[[bin]]
name = "day13"
path = "src/bin/day13/day13.rs"

[[bin]]
name = "day14"
path = "src/bin/day14/day14.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
